# TaskFlow

./: .gitignore
backend/: pyproject.toml
backend/api/: models.py  views.py
backend/api/migrations/: 0001_initial.py
backend/api/templates/api/: secret.html
backend/config/: settings.py  urls.py
client/: package-lock.json
